tests/paczka1/fuzzy1/52039430.err
Error in line 14: PcDV S532 2,81
Error in line 19: cVJW S532 6k,6
Error in line 21: cVJW S532 45,3
Error in line 23: twg5t A115 32,0
